# NBA_Game_Predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: model2020-21.pth  model_deepv1.pth  model_deepv2.pth  model_deepv3.pth  model_deepv4.pth  model_deepv4_params.pkl  model_widev1.pth  modelv1.pth  modelv2.pth  modelv3.pth  modelv4.pth  modelv5.pth  modelv6.pth
src/: dataloaders.py  get_historical_odds.ipynb  get_nba_player_data.ipynb  get_nba_player_data.py  model_definitions.py  nba_game_predictor.ipynb  predict_upcoming_games.ipynb  simulate_betting_seasons.ipynb  simulation.py  utils.py
tests/: test_dataloaders.py  test_model_definitions.py  test_simulation_utils.py
