[project]
name = "nba-game-predictor"
version = "0.1.0"
description = "Predict NBA games using machine learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "selenium",
    "tqdm",
    "scikit-learn",
    "nba_api",
    "matplotlib",
    "scipy",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
